Mexican Navy Implementation
Added all mexican naval bases & implemented all mexican navy boats

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -1513,8 +1513,8 @@ MEX_a_catholic_government_desc: ""
 
 ### MEXICAN FOREIGN POLICY ###
 
-MEX_mexican_foreign_policy: "Mexican Foreign Policy"
-MEX_mexican_foreign_policy_desc: ""
+MEX_mexican_foreign_relations: "Mexican Foreign Relations"
+MEX_mexican_foreign_relations_desc: ""
 MEX_claiming_central_america: "Claiming Central America"
 MEX_claiming_central_america_desc: ""
 MEX_building_southern_defenses: "Building Southern Defenses"
