Update Australia Content - added Trade conditions for all commonwealth nations , and CANZUK

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -117,9 +117,45 @@ l_english:
  australia_md.52.d: "In a act of protecting the Australia economy we have implemented import tariffs on manufactured goods from USA for one year, their diplomats have objected to to the Australian embassy but so far our Australian representatives have declined to speak on the issue."
  australia_md.52.o1: "We must place Australia First above all"
  australia_md.53.t: "Manufacturing Tariffs on China"
- australia_md.53.d: "In a act of protecting the Australia economy we have implemented import tariffs on manufactured goods from China for one year, their diplomats have objected to to the Australian embassy but so far our Australian representatives have declined to speak on the issue."
+ australia_md.53.d: "In a act of protecting the Australian economy we have implemented import tariffs on manufactured goods from China for one year, their diplomats have objected to to the Australian embassy but so far our Australian representatives have declined to speak on the issue."
  australia_md.53.o1: "We must place Australia First above all"
-
+ australia_md.54.t: "Australia Campaigning For Unity"
+ australia_md.54.d: "The [AST.GetLeader] has started a campaign in [NZL.GetNameDefCap] for unification of our nations, as New Zealand was administered as part of New South Wales until 3 May 1841, and long standing provisions in the Australian constitution allow for New Zealand to join Australia as the Seventh State,  while their friendly proposal has merit for now we will see how the public reacts."
+ australia_md.54.o1: "We will watch this closely."
+ australia_md.54.o2: "Kick out their representatives."
+ australia_md.55.t: "Australia Campaigning For Unity"
+ australia_md.55.d: "[AST.GetLeader] has started a campaign in [NZL.GetNameDefCap] for unification of our nations, as New Zealand was administered as part of New South Wales until 3 May 1841, and long standing provisions in the Australian constitution allow for New Zealand to join Australia as the Seventh State,  while our friendly proposal has merit for now we will see how their public reacts."
+ australia_md.55.o1: "For a stronger future together!"
+ australia_md.56.t: "Early elections pushed by New Zealand first"
+ australia_md.56.d: "Early elections have been called for by New Zealand First following a growth in public sentiment for their unification plan with Australia, We could democratically accede to the will of the people and allow and election or we could wait until the election cycle is more favourable to the current administration."
+ australia_md.56.o1: "Allow the Early Election"
+ australia_md.56.o2: "Stop Australian Sponsored Election Interference"
+ australia_md.57.t: "New Zealand Denies Early Election"
+ australia_md.57.d: "[NZL.GetLeader] has requested that we abstain from further election Interference, and denied the New Zealand First request for an Early election."
+ australia_md.57.o1: "They deny the will of their people..."
+ australia_md.58.t: "New Zealand Allows Early Election"
+ australia_md.58.d: "In a suprise move [NZL.GetLeader] has agreed to the New Zealand First request for an Early election, with the majority of the populace in favour of unification with [AST.GetNameDefCap] the election should be held 14 days from now."
+ australia_md.58.o1: "They heard the will of our people..."
+ australia_md.59.t: "Australia Requests Re-unification"
+ australia_md.59.d: "[AST.GetLeader] has requested that we honour our commitment of Re-unification to become the Seventh State of Australia, We can accede to their request, or refuse , alternatively we can request to being a puppet to maintain some of our independence for now ."
+ australia_md.59.o1: "[NZL.GetNameDefCap] agrees to become a puppet"
+ australia_md.59.o2: "[NZL.GetNameDefCap] agrees to be annexed"
+ australia_md.59.o3: "[NZL.GetNameDefCap] refuses Re-unification"
+ australia_md.60.t: "[NZL.GetNameDefCap] has agreed to become a puppet"
+ australia_md.60.d: "In a suprise turn of events [NZL.GetNameDefCap] has agreed to become a puppet of Australia , the end result quite a good one for our Endeavour of total Re-unification. After [AST.GetLeader] announced the news nationwide, large celebrations were held in the major capitals with citizens waving both of the nations flags together."
+ australia_md.60.o1: "We Welcome our Kiwi Brothers!"
+ australia_md.61.t: "[NZL.GetNameDefCap] has agreed to be annexed"
+ australia_md.61.d: "As we had hoped [NZL.GetNameDefCap] has agreed to be annexed into Australia , the end result quite a good one for our Endeavour of total Re-unification. After [AST.GetLeader] announced the news nationwide, large celebrations were held in the major capitals with citizens of both nations waving the Australian flag."
+ australia_md.61.o1: "We Welcome our Kiwi Brothers!"
+ australia_md.62.t: "[NZL.GetNameDefCap] has refused Re-unification"
+ australia_md.62.d: "Unfortunately [NZL.GetNameDefCap] has refused to be re-unified with Australia , the result being quite a bitter one for our Endeavour towards total Re-unification. After [NZL.GetLeader] announced the news nationwide, saying that the planned Re-unification was on hold for the time being quoting an obscure piece of legislation to enforce his point."
+ australia_md.62.o1: "Re-unification will happen one day..."
+ australia_md.63.t: "[NZL.GetNameDefCap] kicks out our Re-unification campaign"
+ australia_md.63.d: "In a unexpected turn of events [NZL.GetNameDefCap] has undemocratically kicked out our campaigners , we have lodged a protest with the [NZL.GetNameDefCap] Embassy, but so far they have declined to speak on the issue."
+ australia_md.63.o1: "[NZL.GetNameDefCap] should've allowed our friendly visit..."
+ australia_md.64.t: "[NZL.GetNameDefCap] allows our Re-unification campaign"
+ australia_md.64.d: "[NZL.GetNameDefCap] have democratically allowed our Unification campaigners and provided a modest platform for our speakers , the [NZL.GetNameDefCap] government has been asked for their opinion, but so far they have declined to speak on the issue. Only the NZ First Party has expressed sincere wishes at working together, on a brighter note their citizens seem receptive to Re-unification."
+ australia_md.64.o1: "[NZL.GetNameDefCap] has allowed our Campaigners"
 
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
@@ -128,8 +164,12 @@ l_english:
  australia_md.151.t: "Australia Continues the 99-year Port Lease"
  australia_md.151.d: "Australia has continued our 99-year Lease of the Landbridge port used for mining operations, citing a change in direction as positive relations grow between our nations, our diplomats welcome this action taken by Australia."
  australia_md.151.a: "Australia is an important trading partner"
-
-
+ #CONDITIONS FOR TRADE RELUCTANCE / ACCEPTANCE in 00_scripted_diplomatic_actions.txt and onactions.
+ condition_CANZUK: "CANZUK Candidate Member"
+ condition_commonwealth: "Commonwealth of Nations Member"
+ condition_commonwealth2: "Commonwealth of Nations Member"
+ condition_long_term_trading_partner: "Historical Long-term Trading Partner"
+ long_term_trading_partner_mod: "Historical Long-term Trading Partner"
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
  CHI_invest_greater_than_4_tt: "our current mining investments are above 5 (Current: [?THIS.CHI_mining_investment_level])"
@@ -1184,10 +1224,17 @@ l_english:
  AST_Veteran_Pension_Support: "Lest We Forget"
  AST_Veteran_Pension_Support_desc: "Our ANZAC heros who proudly defended our nation against foreign aggression have not been forgotten, Their expertise in live combat though outdated is still practical to our troops, we will provide extra benefits for veterans and extra pay for those that assist as instructors to our volunteers & cadets."
  AST_Veteran_Pension_Support_idea: "Veteran Australian Patriotism"
-
-
-
-
+ AST_ANZAC_Commitments: "ANZAC Commitments"
+ AST_ANZAC_Commitments_desc: "A continuation of the historical co-operation between Australia and New Zealand ANZAC forces."
+ AST_ANZAC_Commitments_idea: "ANZAC Commitments"
+ AST_ANZAC_Commitments_mod: "ANZAC Commitments"
+ ANZAC_Veteran: "ANZAC Veteran"
+ AST_Campaigning_in_New_Zealand_for_Unity: "Campaigning in New Zealand for Unity"
+ AST_Campaigning_in_New_Zealand_for_Unity_desc: ""
+ AST_Endorse_New_Zealand_Firsts_Referendum: "Endorse New Zealand Firsts Referendum"
+ AST_Endorse_New_Zealand_Firsts_Referendum_desc: ""
+ AST_The_Seventh_State: "The Seventh State"
+ AST_The_Seventh_State_desc: ""
 
 #military
  AST_ADF: "ADF"
