--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -2167,15 +2167,80 @@ MEX_The_status_quo_desc: ""
 
 MEX_the_media_outlets: "The Media Outlets"
 MEX_the_media_outlets_desc: ""
+MEX_mexican_television_industry: "Mexican Television Industry"
+MEX_mexican_television_industry_desc: ""
+MEX_state_controlled_television: "State Controlled Television"
+MEX_state_controlled_television_desc: ""
+MEX_non_state_controlled_television: "Non-State Controlled Television"
+MEX_non_state_controlled_television_desc: ""
+MEX_violence_against_journalists: "Violence Against Journalists"
+MEX_violence_against_journalists_desc: ""
+MEX_ignore_journalists: "Ignore Journalists"
+MEX_ignore_journalists_desc: ""
+MEX_enhanced_legal_protections: "Enhanced Legal Protections"
+MEX_enhanced_legal_protections_desc: ""
+MEX_the_question_of_media_freedom: "The Question of Media Freedom"
+MEX_the_question_of_media_freedom_desc: ""
+MEX_censored_media: "Censored Media"
+MEX_censored_media_desc: ""
+MEX_uncensored_media: "Uncensored Media"
+MEX_uncensored_media_desc: ""
+MEX_mexican_digital_sphere: "Mexican Digital Sphere"
+MEX_mexican_digital_sphere_desc: ""
+MEX_unsupervised_digital_sphere: "Unsupervised Digital Sphere"
+MEX_unsupervised_digital_sphere_desc: ""
+MEX_supervised_digital_sphere: "Supervised Digital Sphere"
+MEX_supervised_digital_sphere_desc: ""
 
 
+### MEXICAN SOCIETY ###
 
-
-
-
-
-
-
+MEX_mexican_society: "Mexican Society"
+MEX_mexican_society_desc: ""
+MEX_disaster_plan: "Disaster Plan"
+MEX_disaster_plan_desc: ""
+MEX_charity_funded: "Charity Funded"
+MEX_charity_funded_desc: ""
+MEX_government_funding: "Government Funded"
+MEX_government_funding_desc: ""
+MEX_abortion_stance: "Abortion Stance"
+MEX_abortion_stance_desc: ""
+MEX_pro_life: "Pro-Life"
+MEX_pro_life_desc: ""
+MEX_pro_choice: "Pro-Choice"
+MEX_pro_choice_desc: ""
+MEX_migration_stance: "Migration Stance"
+MEX_migration_stance_desc: ""
+MEX_open_door_policy: "Open Door Policy"
+MEX_open_door_policy_desc: ""
+MEX_closing_the_borders: "Closing the Borders"
+MEX_closing_the_borders_desc: ""
+MEX_lgbtq_plus_stance: "LGBTQ+ Stance"
+MEX_lgbtq_plus_stance_desc: ""
+MEX_allow_same_sex_marriage: "Allow Same Sex Marriage"
+MEX_allow_same_sex_marriage_desc: ""
+MEX_anti_lgbtq_plus: "Anti-LGBTQ+"
+MEX_anti_lgbtq_plus_desc: ""
+MEX_the_drug_problem: "The Drug Problem"
+MEX_the_drug_problem_desc: ""
+MEX_criminalization_of_drugs: "Criminalization of Drugs"
+MEX_criminalization_of_drugs_desc: ""
+MEX_decriminalization_of_drugs: "Decriminalization of Drugs"
+MEX_decriminalization_of_drugs_desc: ""
+MEX_prostitution: "Prostitution"
+MEX_prostitution_desc: ""
+MEX_criminalization_of_prostitution: "Criminalization of Prostitution"
+MEX_criminalization_of_prostitution_desc: ""
+MEX_decriminalization_of_prostitution: "Decriminalization of Prostitution"
+MEX_decriminalization_of_prostitution_desc: ""
+MEX_political_fragmentation: "Political Fragmentation"
+MEX_political_fragmentation_desc: ""
+MEX_nationalist_surge: "Nationalist Surge"
+MEX_nationalist_surge_desc: ""
+MEX_leftward_surge: "Leftward Surge"
+MEX_leftward_surge_desc: ""
+MEX_combating_fragmentation: "Combating Fragmentation"
+MEX_combating_fragmentation_desc: ""
 
 
 
