More UKR loc fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -67,8 +67,9 @@ v1.10.3
   - Adjusted some Kazakh focuses to give ag districts instead of building slots
   - The Ace Pilots can now be female
 
- Localisation
+ Localization
   - Major fixes and improvements to the Russian localization
+  - Improvements to localization in Ukrainian content
   - Added a better tooltip for a trigger when Libya is not ruled by the Gaddafis
   - Fixed a number of small typoes in the Nigerian focus tree and the events
   - Fixed a option for the event issue showing the wrong localization in the Operation Secure Tomorrow event
