--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -56,7 +56,7 @@
  ukraine_maidan_west.2.a: "I Have a Bad Feelings About This"
  ukraine_maidan_west.3.t: "Protests On The Maidan"
  ukraine_maidan_west.3.d: "The protesters are not going to leave and are starting to behave more aggressively, maybe it's time to take action and demolish their little tent city.."
- ukraine_maidan_west.3.a: "Let's Attract Berkut"
+ ukraine_maidan_west.3.a: "Let's Deploy Berkut Unit"
  ukraine_maidan_west.3.b: "We Will Not Interfere"
 
  ukraine_maidan_west.4.t: "Protests On The Maidan"
