--- a/Changelog.txt
+++ b/Changelog.txt
@@ -54,6 +54,7 @@ v1.10.3
   - Fixed STATE_TRANSFER_ADD_CORES event, it should work now
   - comoro_events script cleaning
   - Changed the population in ledger from k(which actually is 10k) to M, ledger table can display the proper population now
+  - Fixed some city gfx missing
 
 
  Content:
