--- a/localisation/english/MD_terrain_cities_l_english.yml
+++ b/localisation/english/MD_terrain_cities_l_english.yml
@@ -154,6 +154,10 @@
  terrain_jinan: "Jinan, China"
  terrain_changzhou: "Changzhou, China"
  terrain_zibo: "Zibo, China"
+ terrain_suzhou: "Suzhou, China"
+ terrain_yangzhou: "Yangzhou, China"
+ terrain_yinchuan: "Yinchuan, China"
+ terrain_zhuhai: "Zhuhai, China"
  #Chile
  terrain_santiago: "Santiago, Chile"
  #Colombia
