--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1825,8 +1825,8 @@
  VICTORY_POINTS_12052: "Kunshan"
  VICTORY_POINTS_11928: "Nantong"
  VICTORY_POINTS_4001: "Yangzhou"
- VICTORY_POINTS_12067: "Yancheng"
- VICTORY_POINTS_4091: "Ruago"
+ VICTORY_POINTS_7142: "Yancheng"
+ VICTORY_POINTS_4091: "Rugao"
  VICTORY_POINTS_10095: "Xinghua"
  VICTORY_POINTS_1089: "Taizhou"
  VICTORY_POINTS_9953: "Dongtai"
@@ -1970,7 +1970,7 @@
  VICTORY_POINTS_10367: "Lvliang"
  VICTORY_POINTS_10421: "Changzhi"
  VICTORY_POINTS_7301: "Xi'an"
- VICTORY_POINTS_12156: "Xinyang"
+ VICTORY_POINTS_12156: "Xianyang"
  VICTORY_POINTS_14284: "Baoji"
  VICTORY_POINTS_7314: "Yulin"
  VICTORY_POINTS_7406: "Ankang"
@@ -1978,7 +1978,7 @@
  VICTORY_POINTS_7659: "Shenmu"
  VICTORY_POINTS_12713: "Weinan"
  VICTORY_POINTS_5007: "Tongchuan"
- VICTORY_POINTS_14018: "Hanzhong"
+ VICTORY_POINTS_15859: "Hanzhong"
  VICTORY_POINTS_5092: "Shangluo"
  VICTORY_POINTS_1630: "Baiyin"
  VICTORY_POINTS_5057: "Wuwei"
@@ -1995,6 +1995,7 @@
  VICTORY_POINTS_5025: "Guyuan"
  VICTORY_POINTS_556: "Dingxi"
  VICTORY_POINTS_3742: "Zhongwei"
+ VICTORY_POINTS_14253: "Wuzhong"
  VICTORY_POINTS_3992: "Nanchang"
  VICTORY_POINTS_1628: "Jiujiang"
  VICTORY_POINTS_1066: "Shangrao"
@@ -2020,7 +2021,7 @@
  VICTORY_POINTS_12061: "Wuwei"
  VICTORY_POINTS_7222: "Hefei"
  VICTORY_POINTS_12036: "Huainan"
- VICTORY_POINTS_11916: "Bengbu"
+ VICTORY_POINTS_16210: "Bengbu"
  VICTORY_POINTS_10064: "Lu'an"
  VICTORY_POINTS_1146: "Chuzhou"
  VICTORY_POINTS_10017: "Lujiang"
@@ -2029,14 +2030,15 @@
  VICTORY_POINTS_9995: "Suzhou"
  VICTORY_POINTS_1161: "Lingbi"
  VICTORY_POINTS_10079: "Bozhou"
- VICTORY_POINTS_10434: "Taihe"
+ VICTORY_POINTS_10434: "Xincai"
  VICTORY_POINTS_4144: "Anyang"
+ VICTORY_POINTS_14301: "Shangqiu"
  VICTORY_POINTS_1139: "Xinxiang"
  VICTORY_POINTS_11933: "Puyang"
  VICTORY_POINTS_4606: "Jiaozuo"
  VICTORY_POINTS_9958: "Zhengzhou"
  VICTORY_POINTS_11931: "Luoyang"
- VICTORY_POINTS_10098: "Shangqiu"
+ VICTORY_POINTS_10098: "Shangcai"
  VICTORY_POINTS_7656: "Kaifeng"
  VICTORY_POINTS_7540: "Luohe"
  VICTORY_POINTS_7126: "Zhoukou"
@@ -2062,7 +2064,7 @@
  VICTORY_POINTS_10757: "Yichang"
  VICTORY_POINTS_12086: "Jingzhou"
  VICTORY_POINTS_4009: "Xiangyang"
- VICTORY_POINTS_7019: "Shiyan"
+ VICTORY_POINTS_3098: "Shiyan"
  VICTORY_POINTS_9934: "Suizhou"
  VICTORY_POINTS_5030: "Enshi"
  VICTORY_POINTS_12414: "Lichuan"
@@ -2537,21 +2539,25 @@
  VICTORY_POINTS_3190: "Kostroma"
  VICTORY_POINTS_3066: "Sharya"
  VICTORY_POINTS_62: "Buy"
- VICTORY_POINTS_9311: "Vladimir"
+ VICTORY_POINTS_16184: "Vladimir"
  VICTORY_POINTS_6269: "Ivanovo"
  VICTORY_POINTS_3370: "Kovrov"
  VICTORY_POINTS_6231: "Murom"
  VICTORY_POINTS_3202: "Bosaso"
- VICTORY_POINTS_9257: "Kineshma"
+ VICTORY_POINTS_3190: "Kineshma"
  VICTORY_POINTS_6358: "Vichuga"
  VICTORY_POINTS_6356: "Pereslavl-Zalessky"
  VICTORY_POINTS_121: "Yaroslavl"
- VICTORY_POINTS_6167: "Rybinsk"
+ VICTORY_POINTS_16189: "Rybinsk"
  VICTORY_POINTS_231: "Uglich"
  VICTORY_POINTS_6101: "Tutayev"
  VICTORY_POINTS_6380: "Moscow"
  VICTORY_POINTS_6414: "Podolsk"
- VICTORY_POINTS_301: "Balashikha"
+ VICTORY_POINTS_16202: "Balashikha"
+ VICTORY_POINTS_16251: "Krasnogorsk"
+ VICTORY_POINTS_16254: "Novomoskovsky"
+ VICTORY_POINTS_16255: "Troitsky"
+ VICTORY_POINTS_16256: "Dubna"
  VICTORY_POINTS_6283: "Sergiyev Posad"
  VICTORY_POINTS_9282: "Kolomna"
  VICTORY_POINTS_3358: "Klin"
@@ -2573,6 +2579,7 @@
  VICTORY_POINTS_9301: "Lyudinovo"
  VICTORY_POINTS_335: "Gagarin"
  VICTORY_POINTS_11379: "Ryazan"
+ VICTORY_POINTS_11294: "Skopin"
  VICTORY_POINTS_6262: "Tula"
  VICTORY_POINTS_6315: "Novomoskovsk"
  VICTORY_POINTS_11347: "Aleksin"
@@ -4449,3 +4456,8 @@
  VICTORY_POINTS_14928: "Abaza"
  VICTORY_POINTS_14931: "Narsaq"
  VICTORY_POINTS_14932: "Sisimiut"
+ VICTORY_POINTS_14265: "Greater Tunb"
+ VICTORY_POINTS_16216: "Faror"
+ VICTORY_POINTS_16217: "Sirri"
+ VICTORY_POINTS_16218: "Abu Musa"
+ VICTORY_POINTS_16219: "Lesser Tunb"
