--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1032,7 +1032,7 @@
  STATE_1031: "Espírito Santo"
  STATE_1032: "Eastern Anatolia"
  STATE_1033: "Djavakheti"
- STATE_1034: "Gegharqunik-Tavush"
+ STATE_1034: "Gegharkunik-Tavush"
  STATE_1035: "Syunik"
  STATE_1036: "Karvachar"
  STATE_1037: "Hadrut"
@@ -1183,3 +1183,10 @@
  STATE_1182: "Washington, D.C."
  STATE_1183: "South Kordofan"
  STATE_1184: "White Nile"
+ STATE_1185: "West Timor"
+ STATE_1186: "Ivanovo"
+ STATE_1187: "Vladimir"
+ STATE_1188: "Tula"
+ STATE_1189: "Moscow Oblast"
+ STATE_1190: "South Abumusa"
+ STATE_1191: "North Abumusa"
