tweak the ideas' effects

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -172,7 +172,7 @@
  HKG_gong_hei_fat_coi: "Gong Hei Faat Choy"
  HKG_gong_hei_fat_coi_desc: "The [HKG.GetFlag]Hong Kong, where has just experienced the financial turmoil and entered the new millennium, is facing many economy and social problems. How to solve them, is left to the judgement of people."
  HKG_typhoon_shelter_from_financial_storm: "Shelter from the Financial Storm"
- HKG_typhoon_shelter_from_financial_storm_desc: "The storm has passed, it's time to clean up the mess."
+ HKG_typhoon_shelter_from_financial_storm_desc: "The storm has passed, it's time to clean up the mess. The government will use foreign exchange reserves and intervention policies to stimulate the economy."
  HKG_merge_into_HKEX: "Merge HKCE and HKFE into HKEX"
  HKG_merge_into_HKEX_desc: "After the 1997 Financial Storm, we will allow The Hong Kong Commodity Exchange(HKCE) and the Hong Kong Futures Exchange(HKFE) to merge into the Hong Kong Exchanges and Clearing Limited(HKEX) to enhance Hong Kong's competitiveness and to meet the challenges posed by the globalization of markets."
  HKG_greatest_entrepot: "The greatest Port Merchant in East Asia"
