focus effect tweak

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -323,6 +323,7 @@
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §C£HKG_Conservative Pro-establishment camp§!, §8£HKG_conservatism Pan-democracy camp§! and §G£generic_Nat_Populism_small Localist camp§!. Seats in the Legislative Council are decided by their approval ratings."
  HKG_triad_decision_mutually_exclusive_tt: "You could only take one of these decisions at the same time."
+ HKG_1997_crisis_league_tt: "This National Spirit will keep §Y730§! days."
 
  OPEN_LegCo_BUTTON: "§YLegislative Council§! of [HKG.GetFlag]Hong Kong S.A.R"
  OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the [HKG.GetFlag]Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
