Update Australia Content -Regional Focuses

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -1,4 +1,4 @@
-﻿#By Marmite, Iranian Maggot and Zei33
+﻿#By Marmite, Iranian Maggot and Zei33 MoreDPS
 l_english:
  australia_focus: "Australia Focus Tree"
 #Decision
@@ -157,6 +157,63 @@ l_english:
  australia_md.64.d: "[NZL.GetNameDefCap] have democratically allowed our Unification campaigners and provided a modest platform for our speakers , the [NZL.GetNameDefCap] government has been asked for their opinion, but so far they have declined to speak on the issue. Only the NZ First Party has expressed sincere wishes at working together, on a brighter note their citizens seem receptive to Re-unification."
  australia_md.64.o1: "[NZL.GetNameDefCap] has allowed our Campaigners"
 
+ australia_md.65.t: "Sydney Olympic Games"
+ australia_md.65.d1: "The Sydney 2000 Olympic games have concluded with [USA.GetNameDefCap] placing in 1st with 37 gold & 93 medals in total, A great performace by [SOV.GetNameDefCap] in 2nd with 32 gold & 89 medals in total,  China placed in 3rd in a solid effort with 28 gold & 58 medals total, and the hosting Australian team placed a respectful 4th with 16 gold & 58 medals total."
+ australia_md.65.d2: "Our Sydney 2000 Olympic games have concluded with [USA.GetNameDefCap] placing in 1st with 37 gold & 93 medals in total, A great performace by [SOV.GetNameDefCap] in 2nd with 32 gold & 89 medals in total,  China placed in 3rd in a solid effort with 28 gold & 58 medals total, and the hosting Australian team placed a respectful 4th with 16 gold & 58 medals total. The Images of our Atheletes standing proudly adorned with medals and our Australian flag has raised patriotism support in our nation slightly. The Sydney Organising Committee for the Olympic Games generated approximately US$3 billion from the marketing of the Sydney 2000 Olympic Games."
+ australia_md.65.o1: "The games are concluded."
+ australia_md.65.o2: "We won the Olympic Games."
+ australia_md.65.o3: "We won second place in the Olympic Games."
+ australia_md.65.o4: "We won third place in the Olympic Games."
+ australia_md.65.o5: "We came a respectable Fourth place."
+
+ australia_md.66.t: "Australian faction"
+ australia_md.66.d: "Australia has announced the creation of the Australian faction in the hope to entice our regional partners into a formal alliance."
+ australia_md.66.o1: "We should look for alliance opportunities"
+ australia_md.67.t: "ANZAC Alliance Request"
+ australia_md.67.d: "[AST.GetAdjective] Prime Minister [AST.GetLeader] has formally requested in the spirit of mateship between our nations to be a founding member of the ANZAC Alliance, in history our nations have always fought together and Australia allows nearly 500,000 Kiwis to live in Australia , althought tying our nation to another may bring us into potential future conflicts."
+ australia_md.67.o1: "We accept the Alliance request"
+ australia_md.67.o2: "We will be forging our own path."
+
+ australia_md.68.t: "[NZL.GetNameDefCap] has joined [AST.GetFactionName] "
+ australia_md.68.d: "In a Televised anouncement for both our Nations, [NZL.GetLeader] stated that [NZL.GetNameDefCap] has formally agreed to join [AST.GetFactionName]. This signals a new era of co-operation between the two nations for the future."
+ australia_md.68.o1: "We Welcome our Kiwi Brothers!"
+ australia_md.69.t: "[NZL.GetNameDefCap] has refused an Alliance"
+ australia_md.69.d: "[NZL.GetLeader] has refused to commit to our Alliance offer, citing concerns about being dragged into regional conflict, and their preference to remain neutral for now, stating that depending on the geopolitical circumstances [NZL.GetNameDefCap] may be receptive to such offers again in the future."
+ australia_md.69.o1: "Perhaps in the future..."
+ australia_md.70.t: "Rugby World Cup Friendly Game"
+ australia_md.70.d: "In the airport on the way to the capital [AST.GetLeader] crosses paths with the Rugby world Cup team on their way to play against [NZL.GetNameDefCap] with journalists and cameras present at the moment, the only question is now how should words of support be expressed?"
+ australia_md.70.o1: "Give it a 110%!"
+ australia_md.70.o2: "The Nation is watching, Win at any cost!"
+ australia_md.71.t: "The Rugby World Cup Friendly Game"
+ australia_md.71.d: "The match has been a hotly contested affair with both sides locked even in points in the final minutes of the match, as the [AST.GetAdjective]s are nearing the [NZL.GetNameDefCap] try zone, a quick pass of the ball is sent out wide to the winger who is extended wide past his opposing player, the winger sprints for the corner post and dives scoring a try for the Australian Team."
+ australia_md.71.o1: "Australia wins the match."
+ australia_md.72.t: "The Rugby World Cup Friendly Game"
+ australia_md.72.d: "The match has been a hotly contested affair with both sides locked even in points in the final minutes of the match, as the [AST.GetAdjective]s are nearing the [NZL.GetNameDefCap] try zone, a quick pass of the ball is sent out wide towards the winger who is extended wide past his opposing player, however the New Zealand player anticipate this move sprinting forward and making an intercept before bolting 90 metres to score try for the New Zealand Team."
+ australia_md.72.o1: "[NZL.GetNameDefCap] Wins the match."
+ australia_md.73.t: "Australia New Zealand Forces Joint Training"
+ australia_md.73.d: "[AST.GetNameDefCap] has offered a joint training programme to [NZL.GetNameDefCap] however the success of the programme relies on its funding, We can either provide for our half of the funding 25 billion, 12.5 billion or if we are not able to spare any money we can pay zero."
+ australia_md.73.o1: "[NZL.GetNameDefCap] will provide 25 billion"
+ australia_md.73.o2: "[NZL.GetNameDefCap] will provide 12.5 billion"
+ australia_md.73.o3: "[NZL.GetNameDefCap] cannot afford this now."
+ australia_md.73.o4: "[AST.GetNameDefCap] will provide 25 billion"
+ australia_md.73.o5: "[AST.GetNameDefCap] will provide 12.5 billion"
+ australia_md.73.o6: "[AST.GetNameDefCap] cannot afford this now."
+
+ australia_md.74.t: "Joint Forces Training Operation"
+ australia_md.74.d1: "The Australian initiated Joint Forces Training Operation has concluded , our [NZL.GetAdjective] troops have gained experience relative to our investment in their programme."
+ australia_md.74.d2: "The Joint Forces Training Operation with [NZL.GetNameDefCap] has concluded , our [AST.GetAdjective] troops have gained experience relative to our investment in their programme."
+ australia_md.74.o1: "[AST.GetNameDefCap] provided 25 billion"
+ australia_md.74.o2: "[AST.GetNameDefCap] provided 12.5 billion"
+ australia_md.74.o3: "[AST.GetNameDefCap] provided no addittional funding"
+ australia_md.74.o4: "[NZL.GetNameDefCap] provided 25 billion"
+ australia_md.74.o5: "[NZL.GetNameDefCap] provided 12.5 billion"
+ australia_md.74.o6: "[NZL.GetNameDefCap] provided no addittional funding"
+ australia_md.75.t: "Biak Island Massacre Trial"
+ australia_md.75.d: ""
+ australia_md.75.o1: ""
+
+
+
  australia_md.150.t: "Australia Cancels the 99-year Port Lease"
  australia_md.150.d: "Australia has cancelled our 99-year Lease of the Landbridge port used for mining operations, citing security issues at the port and the lengthy nature of the 99 year lease, our diplomats will vehemently oppose this action taken by Australia."
  australia_md.150.a: "Australia may come to regret this"
@@ -165,11 +222,12 @@ l_english:
  australia_md.151.d: "Australia has continued our 99-year Lease of the Landbridge port used for mining operations, citing a change in direction as positive relations grow between our nations, our diplomats welcome this action taken by Australia."
  australia_md.151.a: "Australia is an important trading partner"
  #CONDITIONS FOR TRADE RELUCTANCE / ACCEPTANCE in 00_scripted_diplomatic_actions.txt and onactions.
- condition_CANZUK: "CANZUK Candidate Member"
+ condition_CANZUK: "CANZUK/ANZUS Candidate Member"
  condition_commonwealth: "Commonwealth of Nations Member"
  condition_commonwealth2: "Commonwealth of Nations Member"
  condition_long_term_trading_partner: "Historical Long-term Trading Partner"
  long_term_trading_partner_mod: "Historical Long-term Trading Partner"
+ shared_colonial_history_mod: "Shared Colonial History"
 #Tooltips
  CHI_influece_greater_influ_20_tt: "Our influence on Australia is greater than 20 (Current: [?THIS.AST_CHI_trade_influence])"
  CHI_invest_greater_than_4_tt: "our current mining investments are above 5 (Current: [?THIS.CHI_mining_investment_level])"
@@ -198,6 +256,10 @@ l_english:
  AST_anzac-class: "Anzac-Class Advancements"
 
 #Ideas
+ AST_Joint_Forces_Training_Operations_half_idea: "Half-funded Joint Operations Training"
+ AST_Joint_Forces_Training_Operations_Full_idea: "Fully-funded Joint Operations Training""
+
+
  AST_the_australian_economy: "The Australian Economy"
  AST_the_australian_economy_desc: ""
  AST_idea_millennium_drought: "The Millennium Drought"
@@ -1229,12 +1291,34 @@ l_english:
  AST_ANZAC_Commitments_idea: "ANZAC Commitments"
  AST_ANZAC_Commitments_mod: "ANZAC Commitments"
  ANZAC_Veteran: "ANZAC Veteran"
+ 
+
+ #regional
+ australia_new_zealand_rugby_mod: "Friendly Sports Rivalry"
+ AST_Ministry_of_Foreign_Affairs: "Department of Foreign Affairs & Trade (DFAT)"
+ AST_Ministry_of_Foreign_Affairs_desc: "DFAT Works with international partners and other countries to tackle global challenges, increase trade and investment opportunities for business & government, protect international rules, keeping our region stable and help Australians overseas."
+ AST_Invest_in_New_Zealand: "Invest in New Zealand"
+ AST_Invest_in_New_Zealand_desc: "We will invest into [NZL.GetNameDefCap] directly building military production facilities and office buildings to support their administration. Having a strong production base in [NZL.GetNameDefCap] will help secure our regional stability."
  AST_Campaigning_in_New_Zealand_for_Unity: "Campaigning in New Zealand for Unity"
- AST_Campaigning_in_New_Zealand_for_Unity_desc: ""
+ AST_Campaigning_in_New_Zealand_for_Unity_desc: "We will plant the seed of unity into the minds of the minds of the citizens of [NZL.GetNameDefCap], with a public advertising and speaking campaign including talks on morning TV shows and radio, hopefully this will blossom into a fruitful future for both of our nations."
  AST_Endorse_New_Zealand_Firsts_Referendum: "Endorse New Zealand Firsts Referendum"
- AST_Endorse_New_Zealand_Firsts_Referendum_desc: ""
+ AST_Endorse_New_Zealand_Firsts_Referendum_desc: "New Zealand First has decided to take our campaign upon themselves to unite our nations, they are proposing to hold a snap election and then if elected a public referendum on Re-unification."
  AST_The_Seventh_State: "The Seventh State"
- AST_The_Seventh_State_desc: ""
+ AST_The_Seventh_State_desc: "Following the Re-unification Referendum in [NZL.GetNameDefCap] , We are pressing ahead with the formal legislation for the peaceful Re-unification of our two Nations. It has been over a century and a half since 1 July 1841 since [NZL.GetNameDefCap] was a part of [AST.GetAdjective] state New South Wales."
+ AST_Joint_Forces_Training_Operations: "ANZAC Joint Forces Training Operations"
+ AST_Joint_Forces_Training_Operations_desc: "Our troops need to be prepared for combat and a efficient method is wargaming with our long standing regional partners, we are offering [NZL.GetNameDefCap] a Joint Forces Training Programme."
+ AST_Rugby_World_Cup: "Rugby World Cup Friendly Game"
+ AST_Rugby_World_Cup_desc: "[NZL.GetNameDefCap] is hosting our [AST.GetAdjective] Mens Rugby team for a friendly match before the Rugby World Cup, the [NZL.GetAdjective] team are quite a tough opponent and deliver hard hitting games and is highly spectated by citizens of both nations."
+ AST_The_Biak_Island_Massacre: "The Biak Island Massacre Trial"
+ AST_The_Biak_Island_Massacre_desc: "The Biak Island massacre was the killing of West Papuan pro-independence demonstrators in 1998. Nobel Peace prize nominee Filep Karma raised the West Papuan Morning Star flag, Indonesia police and military fired on the crowd with the death toll reaching 150, we have been called to adjudicate the matter as in impartial judge for PNG & [IND.GetNameDefCap]"
+ AST_Revive_our_ANZAC_Legacy: "Revive our ANZAC Legacy"
+ AST_Revive_our_ANZAC_Legacy_desc: "Since 25th of April 1915 when Australian and New Zealand soldiers formed part of the allied expedition that set out to capture the Gallipoli, ANZAC forces have served together side by side, We will propose to form an Faction with [NZL.GetNameDefCap], if we are already in an alliance, [NZL.GetNameDefCap] will be invited."
+ AST_West_PNG_Wamena_Riots_Response: "West PNG Wamena Riot Response"
+ AST_West_PNG_Wamena_Riots_Response_desc: " Two weeks after rejecting the autonomy law as soon as it had passed, the chairman of the Papua Presidium Council, Theys Eluay, was found murdered in his car outside Jayapura after he had been kidnapped, which has resulted in further pro-independence demonstaions in PNG which are mainly directed at the strict enforcement by Indonesian officials and Police. Some of our Dual citizens are concerned over the matter and are advocating for a more active approach to secure regional stability."
+ AST_grow_Sangara_rubber_plantation: "Grow PNG Sangara rubber plantation"
+ AST_grow_Sangara_rubber_plantation_desc: "Sangara is a settlement in south-eastern Papua New Guinea. It is located to the east of Kokoda. It is home to valuable rubber plantations that in recent years have not been commercially utilised, We plan to invest into PNG by reinvigorating the rubber producation in Sangara."
+ developed_sangara_mod: "Developed Sangara Rubber Plantation"
+
 
 #military
  AST_ADF: "ADF"
